Fixed title spacing in beer page. Almost finished.

--- a/css/styles-pages.css
+++ b/css/styles-pages.css
@@ -1,15 +1,27 @@
 /**************************/
 /* Reformatting title bar */
 /**************************/
+
 .nav-container {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-left;
 }
 
-h2, p {
-  display: inline-block;
+.title {
+  text-align: center;
+  flex-grow: 2;
+}
+
+.back-arrow-div {
+  border: 2px solid red;
+  margin-left: -30px;
+}
+
+h2 {
   padding: 0;
   margin: 0;
-  margin: 0 auto;
 }
 
 .bar {
@@ -31,7 +43,7 @@ a:hover {
 
 .description {
 	margin: 0;
-	padding: 0 35px 0 0;
+	padding: 10px 35px 0 0;
 }
 
 #slider {
@@ -73,7 +85,6 @@ a:hover {
 	background: 7f7f7f;
 	background: rgba(0,0,0,0.5);
 	width: 100%;
-	max-height: 30%;
 }
 
 #prev, #next {
